@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-04-10T01:26:44Z",
-  "count" : 38,
-  "count_minmax" : [ 38, 41 ],
-  "count_decinc" : [ -3, +41 ],
+  "count" : 29,
+  "count_minmax" : [ 29, 29 ],
+  "count_decinc" : [ -0, +29 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
