@@ -1,15 +1,10 @@
 {
-  "count": 1257,
+  "count": 1370,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-03-26T00:00:00Z",
-      "count": 37,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-03-27T00:00:00Z",
-      "count": 41,
+      "count": 38,
       "uniques": 1
     },
     {
@@ -71,6 +66,16 @@
       "timestamp": "2025-04-08T00:00:00Z",
       "count": 124,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-04-09T00:00:00Z",
+      "count": 124,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-04-10T00:00:00Z",
+      "count": 29,
+      "uniques": 1
     }
   ]
 }
